{
    "@@locale": "en",
    "notificationOverviewTitle": "Notifications",
    "notificationOverviewOpenTabTitle": "Open",
    "notificationOverviewWorkingOnTabTitle": "In progress",
    "notificationOverviewCompletedTabTitle": "Completed",
    "notificationOverviewNoNotifications": "No notifications",
    "notificationOverviewError": "Error: {error}",
    "@notificationOverviewError": {
        "placeholders": {
            "error": {
                "type": "String"
            }
        }
    },
    "dateToday": "Today",
    "dateYesterday": "Yesterday",
    "dateEarlier": "Earlier",
    "notificationDetailTitle": "Notification {organization}",
    "@notificationDetailTitle": {
        "placeholders": {
            "organization": {
                "type": "String"
            }
        }
    },
    "notificationDetailNotFound": "Notification not found",
    "notificationDetailTeamInbox": "Message from team inbox",
    "notificationDetailOpenWebsite": "Open in {organization}",
    "@notificationDetailOpenWebsite": {
        "placeholders": {
            "organization": {
                "type": "String"
            }
        }
    },
    "notificationDetailStatusOpen": "Not picked up yet",
    "notificationDetailStatusWorkingOn": "Picked up by you",
    "notificationDetailStatusCompleted": "Completed",
    "notificationDetailPickUp": "Pick up",
    "notificationDetailReleasePickUp": "Release",
    "notificationDetailComplete": "Complete"
}