...
class MockNotificationService implements NotificationService {
  MockNotificationService();

  final List<NotificationModel> _notifications = [
    NotificationModel(
      id: "notif-001",
      title: "Aanvraagformulier ontvangen",
      description: "Ontvangen aanvraagformulier verpleging thuis",
      organizationName: "ZorgDomein",
      organizationAssetUrl: "",
      created: DateTime.now().copyWith(hour: 11, minute: 40),
      url: "https://google.com",
      status: NotificationState.open,
...
